--- a/ss4_git_html/bai_tap/tao_cv.html
+++ b/ss4_git_html/bai_tap/tao_cv.html
@@ -5,13 +5,20 @@
     <title>Cv cá nhân</title>
 </head>
 <body>
-<h>Phạm Văn B</h>
-<p>Nhân viên phục vụ</p>
-<p>Ngày sinh: 13/06/2001</p>
-<p>Giới tính: Nam</p>
-<p>Điện thoại: 0123456789</p>
-<p>Email: phamvanb2@gmail.com</p>
-<p>Địa chỉ: 63 Hùng Vương, Đà Nẵng</p>
-<p>Websi  http://fb.com/phamvanb2/p>
-</body>te:
+
+<ul style="background-color: beige">
+    <h1 style="text-align: center; color: rebeccapurple" >CV CÁ NHÂN</h1>
+    <li><h>Phạm Văn B</h></li>
+    <li><p>Nhân viên phục vụ</p></li>
+    <li><p>Ngày sinh: 13/06/2001</p></li>
+    <li><p>Giới tính: Nam</p></li>
+    <li><p>Điện thoại: 0123456789</p></li>
+    <li><p>Email: phamvanb2@gmail.com</p></li>
+    <li><p>Địa chỉ: 63 Hùng Vương, Đà Nẵng</p></li>
+    <li><p>Học vấn: 12/12</p></li>
+    <li><p>Kỹ năng: Lập trình</p></li>
+    <li><p>Kinh nghiệm: 1 năm</p></li>
+    <li><p>Định hướng phát triển cá nhân: Áp dụng những kiến thức đã học để trở thành  lập trình viên chuyên nghiệp</li>
+</ul>
+</body>
 </html>
