--- a/ss5_form_table/bai_tap/form_lay_survey_khach_hang.html
+++ b/ss5_form_table/bai_tap/form_lay_survey_khach_hang.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>TẠO FORM LẤY SURVEY KHÁCH HÀNG</title>
     <style>
         .Pay{
             font-size: 15px;
