--- a/ss5_form_table/bai_tap/form_nang_cao/tao_form_nang_cao.html
+++ b/ss5_form_table/bai_tap/form_nang_cao/tao_form_nang_cao.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>TẠO FORM NÂNG CAO</title>
   <style>
     table {
       border-collapse: collapse;
@@ -10,10 +10,10 @@
       background-color: orange;
       margin: auto;
     }
-    .color1 {
+    .bg-white {
       background-color: white;
     }
-    .color2{
+    .bg-black{
       background-color: black;
     }
     .do {
@@ -39,91 +39,91 @@
   </tr>
   <tr class="do">
     <td>A</td>
-    <td class="color1"></td>
-    <td class="color2"></td>
-    <td class="color1"></td>
-    <td class="color2"></td>
-    <td class="color1"></td>
-    <td class="color2"></td>
-    <td class="color1"></td>
-    <td class="color2"></td>
+    <td class="bg-white"></td>
+    <td class="bg-black"></td>
+    <td class="bg-white"></td>
+    <td class="bg-black"></td>
+    <td class="bg-white"></td>
+    <td class="bg-black"></td>
+    <td class="bg-white"></td>
+    <td class="bg-black"></td>
   </tr>
   <tr class="do">
     <td>B</td>
-    <td class="color2"></td>
-    <td class="color1"></td>
-    <td class="color2"></td>
-    <td class="color1"></td>
-    <td class="color2"></td>
-    <td class="color1"></td>
-    <td class="color2"></td>
-    <td class="color1"></td>
+    <td class="bg-black"></td>
+    <td class="bg-white"></td>
+    <td class="bg-black"></td>
+    <td class="bg-white"></td>
+    <td class="bg-black"></td>
+    <td class="bg-white"></td>
+    <td class="bg-black"></td>
+    <td class="bg-white"></td>
   </tr>
   <tr class="do">
     <td>C</td>
-    <td class="color1"></td>
-    <td class="color2"></td>
-    <td class="color1"></td>
-    <td class="color2"></td>
-    <td class="color1"></td>
-    <td class="color2"></td>
-    <td class="color1"></td>
-    <td class="color2"></td>
+    <td class="bg-white"></td>
+    <td class="bg-black"></td>
+    <td class="bg-white"></td>
+    <td class="bg-black"></td>
+    <td class="bg-white"></td>
+    <td class="bg-black"></td>
+    <td class="bg-white"></td>
+    <td class="bg-black"></td>
   </tr>
   <tr class="do">
     <td>D</td>
-    <td class="color2"></td>
-    <td class="color1"></td>
-    <td class="color2"></td>
-    <td class="color1"></td>
-    <td class="color2"></td>
-    <td class="color1"></td>
-    <td class="color2"></td>
-    <td class="color1"></td>
+    <td class="bg-black"></td>
+    <td class="bg-white"></td>
+    <td class="bg-black"></td>
+    <td class="bg-white"></td>
+    <td class="bg-black"></td>
+    <td class="bg-white"></td>
+    <td class="bg-black"></td>
+    <td class="bg-white"></td>
   </tr>
   <tr class="do">
     <td>E</td>
-    <td class="color1"></td>
-    <td class="color2"></td>
-    <td class="color1"></td>
-    <td class="color2"></td>
-    <td class="color1"></td>
-    <td class="color2"></td>
-    <td class="color1"></td>
-    <td class="color2"></td>
+    <td class="bg-white"></td>
+    <td class="bg-black"></td>
+    <td class="bg-white"></td>
+    <td class="bg-black"></td>
+    <td class="bg-white"></td>
+    <td class="bg-black"></td>
+    <td class="bg-white"></td>
+    <td class="bg-black"></td>
   </tr>
   <tr class="do">
     <td>F</td>
-    <td class="color2"></td>
-    <td class="color1"></td>
-    <td class="color2"></td>
-    <td class="color1"></td>
-    <td class="color2"></td>
-    <td class="color1"></td>
-    <td class="color2"></td>
-    <td class="color1"></td>
+    <td class="bg-black"></td>
+    <td class="bg-white"></td>
+    <td class="bg-black"></td>
+    <td class="bg-white"></td>
+    <td class="bg-black"></td>
+    <td class="bg-white"></td>
+    <td class="bg-black"></td>
+    <td class="bg-white"></td>
   </tr>
   <tr class="do">
     <td>G</td>
-    <td class="color1"></td>
-    <td class="color2"></td>
-    <td class="color1"></td>
-    <td class="color2"></td>
-    <td class="color1"></td>
-    <td class="color2"></td>
-    <td class="color1"></td>
-    <td class="color2"></td>
+    <td class="bg-white"></td>
+    <td class="bg-black"></td>
+    <td class="bg-white"></td>
+    <td class="bg-black"></td>
+    <td class="bg-white"></td>
+    <td class="bg-black"></td>
+    <td class="bg-white"></td>
+    <td class="bg-black"></td>
   </tr>
   <tr class="do">
     <td>H</td>
-    <td class="color2"></td>
-    <td class="color1"></td>
-    <td class="color2"></td>
-    <td class="color1"></td>
-    <td class="color2"></td>
-    <td class="color1"></td>
-    <td class="color2"></td>
-    <td class="color1"></td>
+    <td class="bg-black"></td>
+    <td class="bg-white"></td>
+    <td class="bg-black"></td>
+    <td class="bg-white"></td>
+    <td class="bg-black"></td>
+    <td class="bg-white"></td>
+    <td class="bg-black"></td>
+    <td class="bg-white"></td>
   </tr>
   <tr>
     <td style="height: 30px"></td>
