--- a/ss8_cau_truc_dieu_kien/bai_tap/luyen_tap_cau_truc_dieu_kien_2/Bai_12.html
+++ b/ss8_cau_truc_dieu_kien/bai_tap/luyen_tap_cau_truc_dieu_kien_2/Bai_12.html
@@ -2,9 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BÀI 12</title>
 </head>
 <body>
-
+<button type="button" onclick="tinh()">TÍNH TIỀN LÃI !</button>
 </body>
+<script>
+    function tinh() {
+        let tien = parseInt(prompt("Nhập số tiền ban đầu",));
+        let thang = parseInt(prompt("Nhập số tháng"));
+        let laiSuat = parseInt(prompt("Nhập số lãi suất",));
+
+        for (let i = 0; i <= thang; i++) {
+            tien = tien + tien * laiSuat;
+        }
+        alert("Số tiền lãi là: " + tien);
+    }
+</script>
 </html>
