--- a/ss11_cau_truc_lap/bai_tap/luyen_tap_vong_lap2/Bài 3/Bài 3.4.html
+++ b/ss11_cau_truc_lap/bai_tap/luyen_tap_vong_lap2/Bài 3/Bài 3.4.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>BÀI 3</title>
+    <title>BÀI 3.4</title>
 </head>
 <body>
-
+<script>
+    
+</script>
 </body>
 </html>
