--- a/ss11_cau_truc_lap/bai_tap/hien_thi_cac_so_nguyen_to_dau_tien.html
+++ b/ss11_cau_truc_lap/bai_tap/hien_thi_cac_so_nguyen_to_dau_tien.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>HIỂN THỊ CÁC SỐ NGUYÊN TỐ ĐẦU TIÊN</title>
 </head>
 <body>
 
