--- a/ss11_cau_truc_lap/bai_tap/hien_thi_cac_so_nguyen_to_dau_tien.html
+++ b/ss11_cau_truc_lap/bai_tap/hien_thi_cac_so_nguyen_to_dau_tien.html
@@ -8,9 +8,8 @@
 
 </body>
 <script>
-    var n =prompt('Nhập: ')
     var count = 0;
-    for (var i = 2; count < n; i++) {
+    for (var i = 2; count < 20; i++) {
         var m = 0;
         for (var j = 2; j <= Math.sqrt(i); j++) {
             if (i % j == 0) {
