--- a/ss11_cau_truc_lap/bai_tap/luyen_tap_vong_lap1/Bai_1.html
+++ b/ss11_cau_truc_lap/bai_tap/luyen_tap_vong_lap1/Bai_1.html
@@ -6,10 +6,12 @@
 </head>
 <body>
 <script>
-    for(var i = 1; i < 100; i++){
-        document.writeln(i);
+    for (var i = 1; i < 100; i++) {
+        document.write(i + "<br>");
+        if (i == 99) {
+            document.write("<br>" + "<strong>" + "Đã hoàn thành" + "</strong>");
+        }
     }
-    document.write("<br>" + "<strong>" + "Đã hoàn thành" +"</strong>");
 </script>
 </body>
 </html>
