--- a/ss14_ham/bai_tap/luyen_tap_su_dung_ham_2/Bài 6.html
+++ b/ss14_ham/bai_tap/luyen_tap_su_dung_ham_2/Bài 6.html
@@ -6,76 +6,17 @@
 </head>
 <body>
 <script>
-     alertMessage()ád
-ád
-
-     ád
-     sad
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-     
+    let a = +prompt("Nhập vào số: ");
+
+    function check(value) {
+        if (Number.isInteger(value) && value > 0) {
+            return true;
+        } else {
+            return false;
+        }
+    }
+
+    alert(check(a));
 </script>
 </body>
 </html>
