--- a/ss16_oop/bai_tap/Xây dựng lớp mô tả hình chữ nhật.html
+++ b/ss16_oop/bai_tap/Xây dựng lớp mô tả hình chữ nhật.html
@@ -19,30 +19,33 @@
 <canvas id="myCanvas" width="500px" height="600px"></canvas>
 <script>
     class Rectangle {
-      constructor(width,length){
-          this.width = width;
-          this.length = length;
-      }
-      getPerimeter(){
-          return (this.length + this.width) *2
-      }
-      getArea(){
-          return this.length * this.width
-      }
+        constructor(width, length) {
+            this.width = width;
+            this.length = length;
+        }
+
+        getPerimeter() {
+            return (this.length + this.width) * 2
+        }
+
+        getArea() {
+            return this.length * this.width
+        }
     }
+
     let chieudai = document.getElementById('length');
     let chieurong = document.getElementById('width');
 
     function calculate() {
         let a = "";
-        let recTangle = new Rectangle(chieudai.value,chieurong.value);
+        let recTangle = new Rectangle(chieudai.value, chieurong.value);
         a += "Chu vi hình chữ nhật: " + recTangle.getPerimeter() + '<br>';
         a += "Diện tích hình chữ nhật: " + recTangle.getArea();
         document.getElementById("result").innerHTML = a;
         var c = document.getElementById("myCanvas");
         var ctx = c.getContext('2d')
-        ctx.clearRect(0,0,1000,1000);
-        ctx.strokeRect(0,0,chieudai.value,chieurong.value);
+        ctx.clearRect(0, 0, 1000, 1000);
+        ctx.strokeRect(0, 0, chieudai.value, chieurong.value);
     }
 
 </script>
