--- a/ss14_ham/bai_tap/Hàm kiểm tra số nguyên tố.html
+++ b/ss14_ham/bai_tap/Hàm kiểm tra số nguyên tố.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-    let a = prompt("Nhập vào số: ")
+    let a = +prompt("Nhập vào số: ")
     function isPrime(number) {
         let cnt = 0;
         if (number < 2) {
