--- a/ss9_cau_truc_dieu_kien/bai_tap/Câu lệnh switch-case.html
+++ b/ss9_cau_truc_dieu_kien/bai_tap/Câu lệnh switch-case.html
@@ -13,7 +13,7 @@
 </body>
 <script>
     function caculate1() {
-        let month = +document.getElementById("month").value;
+        let month = parseInt(document.getElementById("month").value);
         switch (month) {
             case 1:
             case 3:
