--- a/ss11_cau_truc_lap/bai_tap/Hiển thị các số nguyên tố đầu tiên.html
+++ b/ss11_cau_truc_lap/bai_tap/Hiển thị các số nguyên tố đầu tiên.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>HIỂN THỊ CÁC SỐ NGUYÊN TỐ ĐẦU TIÊN</title>
 </head>
 <body>
-$END$
+<script>
+    let count = 0;
+    for (let i = 2; count < 20; i++) {
+        let m = 0;
+        for (let j = 2; j <= Math.sqrt(i); j++) {
+            if (i % j === 0) {
+                m = 1;
+            }
+        }
+        if (m === 0) {
+            document.write(" " + i);
+            count++;
+        }
+    }
+</script>
 </body>
 </html>
