--- a/ss11_cau_truc_lap/bai_tap/luyen_tap_vong_lap1/Bài 1.html
+++ b/ss11_cau_truc_lap/bai_tap/luyen_tap_vong_lap1/Bài 1.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>BÀI 1</title>
 </head>
 <body>
-$END$
+<script>
+    for (let i = 1; i < 100; i++) {
+        document.writeln(i + "<br>");
+        if (i === 99) {
+            document.writeln("Đã hoàn thành");
+        }
+    }
+</script>
 </body>
 </html>
