--- a/ss11_cau_truc_lap/bai_tap/luyen_tap_vong_lap2/Bài 3/Bài 3.4.html
+++ b/ss11_cau_truc_lap/bai_tap/luyen_tap_vong_lap2/Bài 3/Bài 3.4.html
@@ -10,7 +10,7 @@
     let dau_sao = 5;
     for (let i = 5; i >=1 ; i--) {
         for (let j = 1; j <= khoang_trang; j++) {
-            document.write("&nbsp&nbsp")
+            document.write("&nbsp;&nbsp")
         }
         for (let k = 1; k <= dau_sao; k++) {
             document.write("*")
