--- a/ss11_cau_truc_lap/thuc_hanh/su_dung_vong_lap_for/Bài 1.html
+++ b/ss11_cau_truc_lap/thuc_hanh/su_dung_vong_lap_for/Bài 1.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>BÀI 1</title>
 </head>
 <body>
-$END$
+<p id="result"></p>
+<script>
+    let text = " ";
+    for (let i = 0; i < 5; i++) {
+        text += "The number is " + i + "<br>"
+    }
+    document.getElementById("result").innerHTML = text;
+</script>
 </body>
 </html>
