--- a/ss13_array/bai_tap/Từ điển.html
+++ b/ss13_array/bai_tap/Từ điển.html
@@ -16,7 +16,7 @@
         }
 
     }
-    if (result !== -1) {
+    if (result !== false) {
         alert("Từ bạn nhập vào là : " + dis + "\n" + "Được dịch là:  " + vietnam[result])
     } else {
         alert("Không tìm thấy")
