--- a/ss11_cau_truc_lap/thuc_hanh/su_dung_vong_lap_for/Bài 2.html
+++ b/ss11_cau_truc_lap/thuc_hanh/su_dung_vong_lap_for/Bài 2.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>BÀI 2</title>
 </head>
 <body>
-$END$
+<script>
+    let num = parseInt(prompt("Nhập vào số bất kì: "));
+    let total = 0;
+    for (let i = 1; i <= num; i++) {
+        total += i;
+    }
+    alert(total);
+</script>
 </body>
 </html>
