--- a/ss13_array/bai_tap/luyen_tap_mang_2/Bài 6.html
+++ b/ss13_array/bai_tap/luyen_tap_mang_2/Bài 6.html
@@ -6,11 +6,21 @@
 </head>
 <body>
 <script>
-    let arr = "Đại-học-Duy-Tân"
+    let arr = "Đại-học-Duy-Tân";
     for (let i = 0; i < arr.length; i++) {
         new_str = arr[i].replace("-", "_");
         document.write(new_str);
     }
+
+    // let arr = [];
+    // for (let i = 0; i < 10; i++) {
+    //     arr[i] = prompt("nhập phần tử thứ " + (i + 1));
+    //     if (arr[i] === "-") {
+    //         arr.splice(i, 1);
+    //         arr.splice(i, 0, "_");
+    //     }
+    // }
+    // alert(arr);
 </script>
 </body>
 </html>
