--- a/ss15_ham/thuc_hanh/quan_li_san_pham/index.html
+++ b/ss15_ham/thuc_hanh/quan_li_san_pham/index.html
@@ -1,10 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>ỨNG DỤNG QUẢN LÍ SẢN PHẨM</title>
+    <link rel="stylesheet" href="css.css">
 </head>
 <body>
-$END$
+<h3>Add New Product</h3>
+<table id="tb1">
+    <tr>
+        <td>
+            <input type="text" id="newProduct" placeholder="New Product">
+        </td>
+        <td>
+            <button class="but1" type="submit" onclick="createProduct()">Add</button>
+        </td>
+    </tr>
+</table>
+<h3>Display All Product</h3>
+<table>
+    <tr>
+        <td><strong>Product Name</strong></td>
+        <td></td>
+        <td></td>
+        <td id="sumProduct"></td>
+    </tr>
+    <tbody id="products">
+        <tr>
+            <td></td>
+            <td>
+                <button type="submit" onclick="editProduct()">Edit</button>
+            </td>
+            <td>
+                <button type="submit" onclick="deleteProduct()">Delete</button>
+            </td>
+        </tr>
+    </tbody>
+</table>
+<script src="js.js"></script>
 </body>
 </html>
